# x3-playground

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  conanfile.txt  x3.cpp
.devcontainer/: Dockerfile  Readme.md  devcontainer.json
.devcontainer/scripts/: postCreateCommand.sh
.github/: dependabot.yml
.github/workflows/: cmake.yml  stale.yml
doc/: literal.dot  x3.md
source/literal/: CMakeLists.txt
source/literal/include/literal/: ast.hpp  config.hpp  convert.hpp  convert_error.hpp  parse.hpp
source/literal/include/literal/convert/: convert.hpp  leaf_error_handler.hpp  leaf_errors.hpp  numeric_failure.hpp
source/literal/include/literal/convert/detail/: constraint_types.hpp  from_chars.hpp  from_chars_real.hpp  int_types.hpp.in  power.hpp  safe_math.hpp
source/literal/include/literal/detail/: constraint_types.hpp  digit_traits.hpp  from_chars.hpp  from_chars_real.hpp  int_types.hpp.in  leaf_error_handler.hpp  leaf_errors.hpp  power.hpp  safe_math.hpp  safe_mul.hpp
source/literal/include/literal/parser/: abstract_literal.hpp  based_literal.hpp  bit_string_literal.hpp  char_parser.hpp  character_literal.hpp  comment.hpp  decimal_literal.hpp  error_handler.hpp  graphic_character.hpp  identifier.hpp  integer_parser.hpp  literal.hpp  literal_base_parser.hpp  parser_id.hpp  physical_literal.hpp  string_literal.hpp
source/literal/include/literal/parser/util/: iterator_sentry.hpp  x3_lazy.hpp
source/literal/include/literal/util/: inspect_type.hpp  overloaded.hpp  x3_lazy.hpp
source/literal/src/: ast.cpp  convert.cpp  error_handler.cpp  leaf_errors.cpp  literal.cpp  parse.cpp
source/literal/test/: CMakeLists.txt  lexeme_failure_test.cpp  success_test.cpp  testrunner_literal.cpp  xxx_test.cpp
